2005-09-18  Richard Guenther  <rguenther@suse.de>

	PR middle-end/23944
	* gimplify.c (fold_indirect_ref_rhs): Fix thinko in
	fallback.

2005-09-18  Paul Brook  <paul@codesourcery.com>

	* config/m68k/fpgnuib.c (__floatsidf): Don't rely on signed overflow.

2005-09-17  Richard Henderson  <rth@redhat.com>

	* tree-pass.h, tree-flow.h, tree-ssa-dce.c: Revert last change.
	* tree-ssa-loop.c (pass_vect_dce): Remove.
	* passes.c (init_optimization_passes): Add pass_dce as a sub-pass
	of pass_vectorize.

2005-09-17  Richard Henderson  <rth@redhat.com>

	* tree-pass.h (pass_vect_dce): Declare.
	* passes.c (init_optimization_passes): Add it.
	* tree-flow.h (tree_ssa_dce): Declare.
	* tree-ssa-dce.c (tree_ssa_dce): Export.
	* tree-ssa-loop.c (tree_vectorize): Move current_loops check ...
	(gate_tree_vectorize): ... here.
	(pass_vect_dce): New.

2005-09-17  Jan Hubicka  <jh@suse.cz>

	* except.c (struct eh_status): Turn region_array into vec.
	(expand_resx_expr, collect_eh_region_array, remove_unreachable_regions,
	convert_from_eh_region_ranges, find_exception_handler_labels, 
	current_function_has_exception_handlers, assign_filter_values, 
	build_post_landing_pads, dw2_build_landing_pads,
	sjlj_find_directly_reachable_regions, sjlj_mark_call_sites,
	sjlj_emit_dispatch_table, remove_eh_handler, for_each_eh_region,
	foreach_reachable_handler, can_throw_internal_1,
	convert_to_eh_region_ranges, verify_eh_tree): Update uses of
	region_array.
	(duplicate_eh_region_1): Update region_array.
	(duplicate_eh_regions): Resize region_array and avoid recomputing.

2005-09-17  David Edelsohn  <edelsohn@gnu.org>

	PR middle-end/22067
	* expmed.c (expand_mult): Substitute simple register for op0 when
	computing max_cost.

2005-09-17  Richard Henderson  <rth@redhat.com>

	* expr.c (emit_move_via_integer): Add force argument, pass it on
	to emit_move_change_mode.  Update callers.
	(emit_move_complex): Pass true to new force argument.