@@ -1,3 +1,8 @@
+2005-09-18  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* varasm.c (output_constant): Do not abort on conversions to union
+	types between different sizes.
+
 2005-09-18  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/23944
